// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown should render 1`] = `
<div>
  <div
    class="relative"
  >
    <button
      class="outline-none focus:outline-none float-right"
      data-testid="dropdown__toggle"
    >
      <div
        class="sc-AxjAm buCJuk"
        height="20"
        width="20"
      >
        <div>
          <div>
            <div
              data-src="settings.svg"
              src=""
            />
          </div>
        </div>
      </div>
    </button>
  </div>
</div>
`;

exports[`Dropdown should render toggle icon 1`] = `
<div>
  <div
    class="relative"
  >
    <button
      class="outline-none focus:outline-none float-right"
      data-testid="dropdown__toggle"
    >
      <div
        class="sc-AxjAm buCJuk"
        height="20"
        width="20"
      >
        <div>
          <div>
            <div
              data-src="settings.svg"
              src=""
            />
          </div>
        </div>
      </div>
    </button>
  </div>
</div>
`;

exports[`Dropdown should render with options 1`] = `
<div>
  <div
    class="relative"
  >
    <button
      class="outline-none focus:outline-none float-right"
      data-testid="dropdown__toggle"
    >
      <div
        class="sc-AxjAm buCJuk"
        height="20"
        width="20"
      >
        <div />
      </div>
    </button>
  </div>
</div>
`;
